gccida/c3/save_stack_pointer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_stack_pointer/src/stmt.c:4319:3: error: use of undeclared identifier 'save_level'; did you mean 'save_expr'?
( save_level)( x_block_stack->next == 0LL), 
  ^~~~~~~~~~
  save_expr
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_stack_pointer/src/tree.h:2528:13: note: 'save_expr' declared here
extern tree save_expr                   PARAMS ((tree));
            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_stack_pointer/src/obj/stmt.o] Error 1
